Implemented "naive" Dynamic programming ssolution. It solves knapsack problems 1-3 but goes out of memory for the bigger ones.